# 3D-connecting-rod

./: CMakeLists.txt  README.md
assets/: Concrete031_2K-JPG.usda  hangar.fbx
glimac/include/glimac/: Cube.hpp  Cylinder.hpp  FreeflyCamera.hpp  Mesh.hpp  Model.hpp  Program.hpp  Rod.hpp  Room.hpp  SceneObject.hpp  SceneStructure.hpp  Shape.hpp  SpotLight.hpp  Texture.hpp  TrackballCamera.hpp  common.hpp
glimac/src/: Cube.cpp  Cylinder.cpp  Program.cpp  Room.cpp  SDLWindowManager.cpp
shaders/: model.fs.glsl  model.vs.glsl
src/: main.cpp
